@@ -1,3 +1,6 @@
+2009-01-06 Change user-visible multipage pdf object to PdfPages to
+           avoid accidents with the file-like PdfFile. - JKS
+
 2009-01-05 Fix a bug in pdf usetex: allow using non-embedded fonts. - JKS
 
 2009-01-05 optional use of preview.sty in usetex mode. - JJL
